fixing button on mobile

--- a/Styles.css
+++ b/Styles.css
@@ -177,6 +177,18 @@ body.mobile .dropdown {
 body.mobile .left-align {
     width: 90%;
 }
+.dropbtn.mobile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 4em; /* Adjusted height */
+    width: 4em; /* Adjusted width */
+    cursor: pointer;
+    background: transparent;
+    border-style: none;
+    border-radius: .75em;
+}
 
 /* Desktop Styles */
 body.desktop {
